@@ -31,6 +31,23 @@ import java.util.stream.Collectors;
 public class WrapperTranslator {
 
     /**
+     * 获取实体类的Java属性名列表
+     *
+     * @param entityClass 实体类型
+     * @return 属性名列表
+     */
+    private List<String> getEntityFieldNames(Class<?> entityClass) {
+        TableInfo table = TableInfoHelper.getTableInfo(entityClass);
+        if (table == null) {
+            return CollUtil.newArrayList();
+        }
+        return table.getFieldList().stream()
+                .map(TableFieldInfo::getField)
+                .map(Field::getName)
+                .collect(Collectors.toList());
+    }
+
+    /**
      * 将muggle通用查询条件翻译成Mybatis-plus里使用的QueryWrapper
      *
      * @param muggle 通用查询条件
@@ -42,20 +59,21 @@ public class WrapperTranslator {
         QueryWrapper<T> wrapper = genCriterias(muggle);
         //2.处理子条件集合
         muggle.getRelations().forEach(r -> WrapperTranslator.translate(r.setEntityClass(muggle.getEntityClass()), wrapper));
-        //3.设置join查询
-        //TODO
-        //4.设置查询字段
+        //3.设置查询字段
         List<String> columns = mapField2Colum(muggle.getFields(), muggle.getExcludes(), muggle.getSelector());
         if (CollUtil.isNotEmpty(columns)) {
             wrapper.select(columns);
         }
-        //5.设置groupBy
-        List<String> groupBys = columnLimitByEntity(muggle.getEntityClass(),muggle.getGroupBys());
-        wrapper.groupBy(CollUtil.isNotEmpty(groupBys),
-                groupBys.stream().map(f -> WrapperTranslator.column(muggle, f)).collect(Collectors.toList()));
-        //6.设置orderBy
-        List<MuggleParam.OrderBy> orderBys = orderByLimitByEntity(muggle.getEntityClass(),muggle.getOrderBys());
-        orderBys.forEach(o -> wrapper.orderBy(o != null && StrUtil.isNotBlank(o.getField()), o.isAsc(),o.getField()));
+        //4.设置groupBy（columnLimitByEntity已完成字段名到列名的转换，无需二次映射）
+        List<String> groupBys = columnLimitByEntity(muggle.getEntityClass(), muggle.getGroupBys());
+        wrapper.groupBy(CollUtil.isNotEmpty(groupBys), groupBys);
+        //5.设置orderBy
+        List<MuggleParam.OrderBy> orderBys = orderByLimitByEntity(muggle.getEntityClass(), muggle.getOrderBys());
+        orderBys.forEach(o -> {
+            if (o != null && StrUtil.isNotBlank(o.getField())) {
+                wrapper.orderBy(true, o.isAsc(), o.getField());
+            }
+        });
         return wrapper;
     }
 
@@ -68,15 +86,15 @@ public class WrapperTranslator {
      * @return QueryWrapper<T>
      */
     public <T> QueryWrapper<T> translate(Muggle<T> muggle, QueryWrapper<T> wrapper) {
-        switch (muggle.getType()){
+        switch (muggle.getType()) {
             case AND:
-                wrapper.and(consumer-> criterias(muggle.getEntityClass(),consumer,muggle.getCriterias()));
+                wrapper.and(consumer -> criterias(muggle.getEntityClass(), consumer, muggle.getCriterias()));
                 break;
             case OR:
-                wrapper.or(consumer-> criterias(muggle.getEntityClass(),consumer,muggle.getCriterias()));
+                wrapper.or(consumer -> criterias(muggle.getEntityClass(), consumer, muggle.getCriterias()));
                 break;
             case NESTED:
-                wrapper.nested(consumer-> criterias(muggle.getEntityClass(),consumer,muggle.getCriterias()));
+                wrapper.nested(consumer -> criterias(muggle.getEntityClass(), consumer, muggle.getCriterias()));
                 break;
         }
         return wrapper;
@@ -84,16 +102,18 @@ public class WrapperTranslator {
 
     /**
      * 将查询条件中的分页信息，转成分页对象
-     * @param muggle    查询条件
-     * @return          MugglePage<T>
-     * @param <T>       泛型
+     *
+     * @param muggle 查询条件
+     * @param <T>    泛型
+     * @return Page<T>
      */
-    public <T> Page<T> toPage(Muggle<T> muggle){
+    public <T> Page<T> toPage(Muggle<T> muggle) {
         Page<T> page = new Page<>();
         page.setCurrent(muggle.getCurrent()).setSize(muggle.getSize());
         page.setSearchCount(muggle.getSearchCount());
         return page;
     }
+
     /**
      * 获取查询条件对应的表字段
      *
@@ -119,7 +139,8 @@ public class WrapperTranslator {
         if (entityClass != null) {
             TableInfo table = TableInfoHelper.getTableInfo(entityClass);
             if (table != null) {
-                List<String> columns = table.getFieldList().stream().map(TableFieldInfo::getColumn).collect(Collectors.toList());
+                List<String> columns = table.getFieldList().stream()
+                        .map(TableFieldInfo::getColumn).collect(Collectors.toList());
                 CollUtil.addAll(columns, table.getKeyColumn());
                 return columns.stream().distinct().collect(Collectors.toList());
             }
@@ -161,8 +182,7 @@ public class WrapperTranslator {
         if (entityClass != null) {
             TableInfo table = TableInfoHelper.getTableInfo(entityClass);
             if (table != null) {
-                List<TableFieldInfo> fields = table.getFieldList();
-                for (TableFieldInfo f : fields) {
+                for (TableFieldInfo f : table.getFieldList()) {
                     if (f.getField().getName().equals(field)) {
                         return f.getColumn();
                     }
@@ -178,7 +198,7 @@ public class WrapperTranslator {
      * @param entityClass 指定类型
      * @param fields      指定属性集合
      * @param <T>         泛型类型
-     * @return String
+     * @return List<String>
      */
     public <T> List<String> columns(Class<T> entityClass, List<String> fields) {
         if (CollUtil.isEmpty(fields)) {
@@ -199,7 +219,6 @@ public class WrapperTranslator {
         return column(muggle != null ? muggle.getEntityClass() : null, field);
     }
 
-
     /**
      * 根据查询条件生成mp查询条件
      *
@@ -210,25 +229,22 @@ public class WrapperTranslator {
     <T> QueryWrapper<T> genCriterias(Muggle<T> muggle) {
         QueryWrapper<T> wrapper = new QueryWrapper<>();
         List<QueryCriteria> criterias = CollUtil.newArrayList(muggle.getCriterias());
-        //1.判断查询参数字典是否为空，如不为空则将查询参数转成查询条件集合
         if (MapUtil.isNotEmpty(muggle.getParams())) {
-            List<QueryCriteria> cs = ParamsConverter.conertMap2Criterias(muggle.getParams());
-            CollUtil.addAll(criterias, cs);
+            CollUtil.addAll(criterias, ParamsConverter.conertMap2Criterias(muggle.getParams()));
         }
-        //2.返回拼装好后的查询条件
         return criterias(muggle.getEntityClass(), wrapper, criterias);
     }
 
     /**
      * 根据指定类型限定能够拼接的查询条件
-     * @param entityClass   指定类型
-     * @param wrapper       mp查询条件
-     * @param criterias     业务查询条件集合
-     * @return              QueryWrapper<T>
-     * @param <T>           泛型
+     *
+     * @param entityClass 指定类型
+     * @param wrapper     mp查询条件
+     * @param criterias   业务查询条件集合
+     * @param <T>         泛型
+     * @return QueryWrapper<T>
      */
-    private <T>QueryWrapper<T> criterias(Class<T> entityClass, QueryWrapper<T> wrapper,List<QueryCriteria> criterias){
-        //2.判断直接查询条件集合是否为空，如果不为空则直接使用查询条件查询
+    private <T> QueryWrapper<T> criterias(Class<T> entityClass, QueryWrapper<T> wrapper, List<QueryCriteria> criterias) {
         List<QueryCriteria> result = criteriaLimitByEntity(entityClass, criterias);
         if (CollUtil.isNotEmpty(result)) {
             result.forEach(c -> MpCriteria.translate(wrapper, c));
@@ -237,8 +253,8 @@ public class WrapperTranslator {
     }
 
     /**
-     * 返回对象中可以查询的字段，
-     * --重点：该方法返回的查询字段不做限定，若对应的实体没有返回指定的数据库字段，则默认返回下划线风格字段名称，因为真实的查询中，字段可能存在别名或者聚合函数等名称
+     * 返回对象中可以查询的字段
+     * --重点：该方法返回的查询字段不做限定，若对应的实体没有返回指定的数据库字段，则默认返回下划线风格字段名称
      *
      * @param fields   查询字段集合
      * @param excludes 排除查询的字段集合
@@ -247,25 +263,23 @@ public class WrapperTranslator {
      * @return List<String>
      */
     <T> List<String> mapField2Colum(List<String> fields, List<String> excludes, T selector) {
-        //0.设置返回值为空集合
         List<String> result = CollUtil.newArrayList();
         if (selector != null) {
-            //0.1获取类型的属性列表
             Map<String, Object> selectorMap = MapUtil.newHashMap();
-            //0.2过滤非NULL字段
             BeanUtil.beanToMap(selector, selectorMap,
                     CopyOptions.create().setIgnoreError(true).setIgnoreNullValue(true));
             if (CollUtil.isNotEmpty(selectorMap)) {
                 CollUtil.addAll(fields, selectorMap.keySet());
             }
         }
-        //1.若没有设置查询字段且没设置排除字段则采用默认查询
         if (CollUtil.isEmpty(fields) && CollUtil.isEmpty(excludes)) {
             return result;
         }
-        //2.根据实体类型设置字段
         Class<?> entityClass = selector != null ? selector.getClass() : null;
-        CollUtil.addAll(result, columns(entityClass, fields).removeAll(columns(entityClass, excludes)));
+        // 修复：removeAll返回boolean而非List，需先获取列表再移除
+        List<String> selected = columns(entityClass, fields);
+        selected.removeAll(columns(entityClass, excludes));
+        CollUtil.addAll(result, selected);
         return result;
     }
 
@@ -278,50 +292,53 @@ public class WrapperTranslator {
      * @return List<String>
      */
     public <T> List<String> columnLimitByEntity(Class<T> entityClass, List<String> fields) {
-        Assert.notNull(entityClass,()->new MugglesBizException("指定实体类型不能为Null"));
-        TableInfo table = TableInfoHelper.getTableInfo(entityClass);
-        List<String> fieldList = table.getFieldList().stream().map(TableFieldInfo::getField).map(Field::getName).collect(Collectors.toList());
-        if (CollUtil.isNotEmpty(fieldList)){
-            List<String> result = fields.stream().filter(fieldList::contains).toList();
-            return result.stream().map(f->column(entityClass,f)).collect(Collectors.toList());
+        Assert.notNull(entityClass, () -> new MugglesBizException("指定实体类型不能为Null"));
+        List<String> fieldNames = getEntityFieldNames(entityClass);
+        if (CollUtil.isNotEmpty(fieldNames)) {
+            return fields.stream()
+                    .filter(fieldNames::contains)
+                    .map(f -> column(entityClass, f))
+                    .collect(Collectors.toList());
         }
         return fields;
     }
 
     /**
-     * 根据指定的实体限定字段，默认策略丢弃不符合的字段
+     * 根据指定的实体限定排序字段，默认策略丢弃不符合的字段
      *
      * @param entityClass 指定实体类型
      * @param fields      指定字段集合
      * @param <T>         泛型类型
-     * @return List<String>
+     * @return List<MuggleParam.OrderBy>
      */
     public <T> List<MuggleParam.OrderBy> orderByLimitByEntity(Class<T> entityClass, List<MuggleParam.OrderBy> fields) {
-        Assert.notNull(entityClass,()->new MugglesBizException("指定实体类型不能为Null"));
-        TableInfo table = TableInfoHelper.getTableInfo(entityClass);
-        List<String> fieldList = table.getFieldList().stream().map(TableFieldInfo::getField).map(Field::getName).collect(Collectors.toList());
-        if (CollUtil.isNotEmpty(fieldList)){
-            List<MuggleParam.OrderBy> result = fields.stream().filter(f->fieldList.contains(f.getField())).toList();
-            return result.stream().map(f->f.setField(column(entityClass,f.getField()))).collect(Collectors.toList());
+        Assert.notNull(entityClass, () -> new MugglesBizException("指定实体类型不能为Null"));
+        List<String> fieldNames = getEntityFieldNames(entityClass);
+        if (CollUtil.isNotEmpty(fieldNames)) {
+            return fields.stream()
+                    .filter(f -> fieldNames.contains(f.getField()))
+                    .map(f -> f.setField(column(entityClass, f.getField())))
+                    .collect(Collectors.toList());
         }
         return fields;
     }
 
     /**
-     * 根据指定的实体限定字段，默认策略丢弃不符合的字段
+     * 根据指定的实体限定查询条件，默认策略丢弃不符合的字段
      *
      * @param entityClass 指定实体类型
      * @param fields      指定字段集合
      * @param <T>         泛型类型
-     * @return List<String>
+     * @return List<QueryCriteria>
      */
     public <T> List<QueryCriteria> criteriaLimitByEntity(Class<T> entityClass, List<QueryCriteria> fields) {
-        Assert.notNull(entityClass,()->new MugglesBizException("指定实体类型不能为Null"));
-        TableInfo table = TableInfoHelper.getTableInfo(entityClass);
-        List<String> fieldList = table.getFieldList().stream().map(TableFieldInfo::getField).map(Field::getName).collect(Collectors.toList());
-        if (CollUtil.isNotEmpty(fieldList)){
-            List<QueryCriteria> result = fields.stream().filter(f->fieldList.contains(f.getAttribute())).toList();
-            return result.stream().map(f->f.setAttribute(column(entityClass,f.getAttribute()))).collect(Collectors.toList());
+        Assert.notNull(entityClass, () -> new MugglesBizException("指定实体类型不能为Null"));
+        List<String> fieldNames = getEntityFieldNames(entityClass);
+        if (CollUtil.isNotEmpty(fieldNames)) {
+            return fields.stream()
+                    .filter(f -> fieldNames.contains(f.getAttribute()))
+                    .map(f -> f.setAttribute(column(entityClass, f.getAttribute())))
+                    .collect(Collectors.toList());
         }
         return fields;
     }
